Bug 433892 - Elisa does not recognize AAC files
Summary: Elisa does not recognize AAC files
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-03 06:55 UTC by Ashwin
Modified: 2021-03-07 14:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ashwin 2021-03-03 06:55:55 UTC
SUMMARY
AAC music files cannot be loaded into the playlist. Elisa refuses to play them. 

STEPS TO REPRODUCE
1. Download an AAC file using youtube-dl and ffmpeg. For example (Creative Commons licensed):

cd ~/Music
youtube-dl -f "bestaudio" --continue --no-overwrites --ignore-errors --extract-audio --audio-format aac -o "%(title)s.%(ext)s" https:
//www.youtube.com/watch?v=pCHKfuZEoBI

2. Open the file via "Files" interface in Elisa

OBSERVED RESULT

A "stop sign" appears in the playlist, nothing is played.

EXPECTED RESULT

You hear music :) There is no issue if mp3 was chosen instead of aac. The same aac file plays fine in mpv, vlc and smplayer.

SOFTWARE/OS VERSIONS
(available in About System)
Operating System: Arch Linux
KDE Plasma Version: 5.21.2
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.10.19-1-lts
OS Type: 64-bit
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-9850H CPU @ 2.60GHz
Memory: 31.1 GiB of RAM
Graphics Processor: Quadro RTX 3000/PCIe/SSE2

ADDITIONAL INFORMATION
I am using phonon-qt5-gstreamer backend. All gst-plugins (good, bad and ugly are installed).
Comment 1 Ashwin 2021-03-03 07:00:49 UTC
If I launch Elisa via terminal and I click the AAC file to play, it says:

qrc:/qml/PlayListBasicView.qml:122:21: Unable to assign [undefined] to bool
Comment 2 Ashwin 2021-03-03 09:08:24 UTC
I saw in https://stackoverflow.com/a/18111039 that AAC is a raw stream format. So I converted them to .m4a like this:

ffmpeg -i input.aac -codec copy output.m4a

Is it by design that Elisa cannot play raw audio files?
Comment 3 Matthieu Gallien 2021-03-03 18:59:16 UTC
No idea yet why it does not work but I can reproduce it.

Thanks for the report
Comment 4 Bug Janitor Service 2021-03-03 21:58:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/221
Comment 5 Matthieu Gallien 2021-03-07 14:25:07 UTC
Git commit f9b949c150950b15ade9f68664497c56f2480a9a by Matthieu Gallien.
Committed on 07/03/2021 at 10:49.
Pushed by mgallien into branch 'release/20.12'.

still return a valid track even when no extractors support it

that is the case when we get an audio file not with a format not yet
supported by KFileMetaData
FIXED-IN: 21.04

M  +11   -0    src/filescanner.cpp

https://invent.kde.org/multimedia/elisa/commit/f9b949c150950b15ade9f68664497c56f2480a9a