still return a valid track even when no extractors support it

that is the case when we get an audio file not with a format not yet
supported by KFileMetaData

BUG: 433892
FIXED-IN: 21.04